# BibleStudyTools

./: pyproject.toml
src/biblestudytools/bible/: __init__.py  exceptions.py  nav.py  urls.py  util.py
tests/bible/: test_nav.py  test_urls.py
