[tool.poetry]
name = "biblestudytools"
version = "0.3.0"
description = ""
authors = ["numbergazing <hello@numbergazing.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.0"
beautifulsoup4 = "^4.11.1"
pytest = "^7.1.2"
click = "^8.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
